--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body{
     align-items: center;
     flex-direction: column;
     gap: 30px;
+    background-color: whitesmoke;
 }
 
 input{
@@ -15,6 +16,8 @@ input{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     text-align: center;
+    padding: 5px;
+    background-color: whitesmoke;
 }
 
 input:focus{
@@ -33,7 +36,7 @@ input:focus{
     gap: 1.3rem;
 }
 .bottom button{
-  padding: 8px;
+  padding: 12px;
   font-size: 14px;
   border-radius: 0.2rem;
   border: none;
